Preparing to wrap Scene storage in a Qt data model.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@230 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Utilities/MapViewer/ui/mainwindow.ui
+++ b/Projects/CoX/Utilities/MapViewer/ui/mainwindow.ui
@@ -69,8 +69,25 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionLoad_map</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>load_map()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>finish_viewer()</slot>
+  <slot>load_map()</slot>
  </slots>
 </ui>
