--- a/Projects/CoX/Utilities/MapViewer/ui/objecttreewidget.ui
+++ b/Projects/CoX/Utilities/MapViewer/ui/objecttreewidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>329</width>
+    <height>301</height>
    </rect>
   </property>
   <property name="floating">
@@ -16,6 +16,13 @@
   <property name="windowTitle">
    <string>Object tree</string>
   </property>
+  <widget class="QWidget" name="dockWidgetContents">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QTreeView" name="m_object_tree"/>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources/>
  <connections/>
