--- a/Projects/CoX/Utilities/MapViewer/ui/mainwindow.ui
+++ b/Projects/CoX/Utilities/MapViewer/ui/mainwindow.ui
@@ -13,7 +13,13 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="CompositeViewerQOSG" name="m_viewer">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QWidget" name="m_view" native="true"/>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -51,6 +57,14 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>CompositeViewerQOSG</class>
+   <extends>QWidget</extends>
+   <header>CompositeViewerQOSG.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
