* Cosmetics * Updated to compile with ACE 6.0 * Automated ACE debug library selection on VisualStudio Debug builds. * micro-fix to Example01 qt client.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@270 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/Example01/Clients/QtBased/ui/clientwindow.ui
+++ b/Projects/Example01/Clients/QtBased/ui/clientwindow.ui
@@ -15,8 +15,18 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="margin">
+     <number>3</number>
+    </property>
     <item>
-     <widget class="QGraphicsView" name="graphicsView"/>
+     <widget class="QGraphicsView" name="graphicsView">
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
