--- a/Projects/CoX/Utilities/MapViewer/src/SideWindow.ui
+++ b/Projects/CoX/Utilities/MapViewer/src/SideWindow.ui
@@ -33,7 +33,7 @@
        <bool>true</bool>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="documentMode">
        <bool>true</bool>
@@ -51,7 +51,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QTreeView" name="nodeList"/>
+         <widget class="QTreeView" name="nodeList">
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
+         </widget>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -132,11 +136,20 @@
       </widget>
       <widget class="QWidget" name="tab_2">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <attribute name="title">
         <string>Materials</string>
        </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QTextEdit" name="matDescriptionTxt">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
