Screen resolution setGeometry warning fix & IPLookup
* Restructure of UI to accomodate lower screen resolutions
* Couple of fixes for auth server label change and enable/disable logic
* Add IPLookup functionality, users can now lookup local system IP's
  rather than entering manually
* Few UI bug fixes for linux

--- a/Projects/CoX/Utilities/SEGSAdmin/resources.qrc
+++ b/Projects/CoX/Utilities/SEGSAdmin/resources.qrc
@@ -6,5 +6,6 @@
         <file>icon_warning.png</file>
         <file>icon_good.png</file>
         <file>segs.bmp</file>
+        <file>icon_lookup.png</file>
     </qresource>
 </RCC>
